--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
                 <div class="col-xl-9 mx-auto">
                     <h1 class="mb-5">The Human Tech Project</h1>
                 </div>
-                <p class="col-xl-9 mx-auto lead">The Human Tech Project is a non-for-profit organization which uses the technical
-                skills and experience of the youth for the betterment of the world. Its primary beneficiaries are the
-                technologically challenged seniors, the physically handicapped and the underprivileged.</p>
+                <p class="col-xl-9 mx-auto lead">The Human Tech Project is a student-led 501(c)(3) nonprofit that aims to find solutions to global problems with technically advanced and impactful projects. We follow an intricate 4-step process to ensure these projects truly make an impact: Market Analysis, R&D and Prototyping, Outreach and Implementation, and Expansion. We supplement these initiatives with coding and hardware classes for children, with the goal of fostering creativity and a passion for technology, preparing the generation of tomorrow to continue what we started.</p>
             </div>
         </div>
     </header>
